Switched over to foundation base themeing
refactored frontpage and profilepages to utilize Foundation 6 as a base theme

--- a/themes/zurb_foundation/templates/block.html.twig
+++ b/themes/zurb_foundation/templates/block.html.twig
@@ -48,6 +48,7 @@
     'block',
     'block-' ~ configuration.provider|clean_class,
     'block-' ~ plugin_id|clean_class,
+    'row'
   ]
 %}
 <section{{ attributes.addClass(classes) }}>
