--- a/themes/STARTER/node--portfolio-main.html.twig
+++ b/themes/STARTER/node--portfolio-main.html.twig
@@ -1,11 +1,11 @@
 
 
 
-<div class="grid-x">
-	<div class = "cell">
+<div class="row">
+	<div class = "column">
 		<ul class="tabs" data-tabs id="profile-tabs">
 			 <li class="tabs-title is-active"><a href="#panel1" aria-selected="true">Tab 1</a></li>
-<li class="tabs-title"><a href="#panel2">Tab 2</a></li>
+	  <li class="tabs-title"><a href="#panel2">Tab 2</a></li>
       <li class="tabs-title"><a href="#panel3">Tab 3</a></li>
       <li class="tabs-title"><a href="#panel4">Tab 4</a></li>
       <li class="tabs-title"><a href="#panel5">Tab 5</a></li>
@@ -13,15 +13,15 @@
     	</ul>
     	<div class="tabs-content" data-tabs-content="profile-tabs">
     		<div class="tabs-panel is-active" id="panel1">
-			<div class="grid-x">
-				<div class="cell small-12 large-6">
+			<div class="row">
+				<div class="column small-12 large-6">
 
 					{{content.field_profilepic}}
 					
 
 				</div>
 
-				<div class= "cell small-12 large-6 text-align:left">
+				<div class= "column small-12 large-6 text-align:left">
 					
 					
 					 {{content.field_about}} 
