Formatted front page
debating need for mobile menu, as opposed to resized links.

--- a/themes/STARTER/page--front.html.twig
+++ b/themes/STARTER/page--front.html.twig
@@ -6,11 +6,11 @@
 <div class="row">
 
   <main role="main">
-    <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
+    <a id="main-content" ></a>{# link is in html.html.twig #}
 
     <div class="layout-content">
     	
-      <div class="front-content">
+      <div class="front-content twelve columns text-left">
           {{ page.content }}
       </div>
       
