--- a/themes/STARTER/partials/header.html.twig
+++ b/themes/STARTER/partials/header.html.twig
@@ -8,7 +8,7 @@
   
 
 
-  <div class="main-navigation menu">
+  <div class="main-navigation menu top-bar-right">
   
     {{page.main_navigation}}
 
