--- a/themes/STARTER/scss/layout/_header.scss
+++ b/themes/STARTER/scss/layout/_header.scss
@@ -2,7 +2,7 @@
 
 
 .main-header{
-	height: 200px;
+	height: 150px;
 	width: 100%;
 	background:url(../images/hero2.jpg) no-repeat center center;
 }
@@ -16,9 +16,8 @@
 }
 
 .main-navigation{
-	margin-top: 75px;
 	position: relative;
-	left: 100px;
+	right: 100px;
 	li{
 		float: left;
 	}
