--- a/themes/zurb_foundation/templates/block.html.twig
+++ b/themes/zurb_foundation/templates/block.html.twig
@@ -48,7 +48,7 @@
     'block',
     'block-' ~ configuration.provider|clean_class,
     'block-' ~ plugin_id|clean_class,
-    'row'
+    'row',
   ]
 %}
 <section{{ attributes.addClass(classes) }}>
