Basic sticky topbar

--- a/themes/STARTER/partials/header.html.twig
+++ b/themes/STARTER/partials/header.html.twig
@@ -1,17 +1,20 @@
 
 
-<header class="main-header" role="banner">
+<header class="main-header" role="banner" >
 
- 
-  
    {{ page.header }}
   
 
 
-  <div class="main-navigation menu top-bar-right">
-  
-    {{page.main_navigation}}
+  <div class="top-bar">
+  	<div class="menu">
 
+  		{{page.main_navigation}}
+
+  	</div>
+  
   </div>
+</div>
+</div>
    
 </header>
