--- a/themes/STARTER/scss/layout/_header.scss
+++ b/themes/STARTER/scss/layout/_header.scss
@@ -14,19 +14,24 @@
 		max-width: 100%;
 	}
 }
+.top-bar{
+	background-color: #800000;
+	width: 100%;
+}
 
 .main-navigation{
-	position: relative;
-	right: 100px;
+
 	li{
 		float: left;
+		padding: 3em;
 	}
 
 	a{
 		display: block;
 		color: #fff;
+		font-size: 150%;
 		text-decoration: none;
-		padding: 0 20px;
+		padding: 10em;
 
 		&:hover{
 			text-decoration: underline;
